fix(text-input): adjust label spacing on textarea

--- a/packages/text-input/text-input.scss
+++ b/packages/text-input/text-input.scss
@@ -34,6 +34,7 @@ $text-area-height: 12rem;
 .jkl-text-area {
     & .jkl-text-field__input {
         transition: all 175ms ease;
+        margin-top: rem(4px);
         &:focus-within,
         &:not(:placeholder-shown) {
             & .jkl-text-area {
